--- a/reading/templates/login.html
+++ b/reading/templates/login.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Reading</title>
+    {% load static %}
+    <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static '/css/mystyle.css' %}" rel="stylesheet">
+    <script src="{% static '/scripts/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static '/js/bootstrap.min.js' %}"></script>
 </head>
 <body>
+<!--导航栏-->
+<nav class="navbar navbar-inverse" role="navigation">
+   <div class="navbar-header">
+      <a class="navbar-brand">阅钉Reading</a>
+   </div>
+   <div>
+      <ul class="nav navbar-nav pull-right">
+         <li><a href="/login">登录</a></li>
+         <li class="active"><a href="/register">注册</a></li>
+      </ul>
+   </div>
+</nav>
+
+
+<div id="container" class='container'>
+   <div class="row">
+      <div class="span8 left">
+         <form action  class="form form-horizontal" role="form" method="post">{% csrf_token %}
+            <div class="form-group">
+               <label for="inputeMail" class="col-sm-2 control-label">邮箱：</label>
+                  <div class="col-sm-4">
+                     <input type="email" name="email" class="form-control" required id="inputeMail">
+                  </div>
+            </div>
+            <div class="form-group">
+               <label for="inputPassword1" class="col-sm-2 control-label">密码：</label>
+                  <div class="col-sm-4">
+                     <input type="password" name="password1" class="form-control" required id="inputPassword1">
+                  </div>
+            </div>
+            <ul class="errorlist">
+               <li>{{ errors }}</li>
+            </ul>
+            <div class="form-action">
+               <div class="col-sm-4" style="float:none;display:block;margin-left:auto;margin-right:auto;">
+                  <button type="submit" class="btn btn-primary">登录</button>
+               </div>
+            </div>
+         </form>
+      </div>
+   </div>
+</div>
+
+
 
 </body>
 </html>
