--- a/reading/templates/register.html
+++ b/reading/templates/register.html
@@ -19,7 +19,7 @@
    <div>
       <ul class="nav navbar-nav pull-right">
          <li><a href="/login">登录</a></li>
-         <li class="active"><a href="#">注册</a></li>
+         <li class="active"><a href="/register">注册</a></li>
       </ul>
    </div>
 </nav>
