--- a/reading/templates/login.html
+++ b/reading/templates/login.html
@@ -30,9 +30,9 @@
       <div class="span8 left">
          <form action  class="form form-horizontal" role="form" method="post">{% csrf_token %}
             <div class="form-group">
-               <label for="inputeMail" class="col-sm-2 control-label">邮箱：</label>
+               <label for="inputUserName" class="col-sm-2 control-label">用户名：</label>
                   <div class="col-sm-4">
-                     <input type="email" name="email" class="form-control" required id="inputeMail">
+                     <input type="text" name="username" class="form-control" required id="inputUserName" placeholder="仅允许小写字母，数字和短横, 4~20个字符.">
                   </div>
             </div>
             <div class="form-group">
