--- a/reading/templates/uploadfile.html
+++ b/reading/templates/uploadfile.html
@@ -27,46 +27,38 @@
 
 <div id="container" class='container'>
    <div class="row">
-      <div class="span8 left">
-         <form action  class="form form-horizontal" role="form" method="post">{% csrf_token %}
+      <div class="span6 left">
+         <form action  class="form form-horizontal" role="form" method="post">
             <div class="form-group">
-               <label for="inputUserName" class="col-sm-2 control-label">用户名：</label>
+               <label for="inputName" class="col-sm-2 control-label">书名：</label>
                   <div class="col-sm-4">
-                     <input type="text" name="username" class="form-control" required id="inputUserName" placeholder="仅允许小写字母，数字和短横, 4~20个字符.">
+                     <input type="text" name="name" class="form-control" id="inputName" value="{{ book.name }}" disabled>
                   </div>
             </div>
             <div class="form-group">
-               <label for="inputeMail" class="col-sm-2 control-label">邮箱：</label>
+               <label for="inputauthor" class="col-sm-2 control-label">作者：</label>
                   <div class="col-sm-4">
-                     <input type="email" name="email" class="form-control" required id="inputeMail">
+                     <input type="text" name="author" class="form-control" id="inputauthor" value="{{ book.author }}" disabled>
                   </div>
             </div>
             <div class="form-group">
-               <label for="inputPassword1" class="col-sm-2 control-label">密码：</label>
+               <label for="inputscore" class="col-sm-2 control-label">评分：</label>
                   <div class="col-sm-4">
-                     <input type="password" name="password1" class="form-control" required id="inputPassword1">
+                     <input type="text" name="score" class="form-control" id="inputscore" value="{{ book.score }}" disabled>
                   </div>
             </div>
             <div class="form-group">
-               <label for="inputPassword2" class="col-sm-2 control-label">确认密码：</label>
-                  <div class="col-sm-4">
-                     <input type="password" name="password2" class="form-control" required id="inputPassword2">
-                  </div>
+               <label class="col-sm-2 control-label" for="inputfile">文件输入：</label>
+               <input type="file" name="file" id="inputfile">
             </div>
-            <ul class="errorlist">
-               <li>{{ errors }}</li>
-            </ul>
-            <div class="form-action">
+            <div class="form-action form-group">
                <div class="col-sm-2" style="float:none;display:block;margin-left:auto;margin-right:auto;">
-                  <button type="submit" class="btn btn-primary">注册</button>
+                  <button type="submit" class="btn btn-primary">保存</button>
                </div>
             </div>
          </form>
       </div>
    </div>
 </div>
-
-
-
 </body>
 </html>
