--- a/reading/templates/uploadfile.html
+++ b/reading/templates/uploadfile.html
@@ -1,29 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reading</title>
-    {% load static %}
-    <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static '/css/mystyle.css' %}" rel="stylesheet">
-    <script src="{% static '/scripts/jquery-3.2.1.min.js' %}"></script>
-    <script src="{% static '/js/bootstrap.min.js' %}"></script>
-</head>
-<body>
-<!--导航栏-->
-<nav class="navbar navbar-inverse" role="navigation">
-   <div class="navbar-header">
-      <a class="navbar-brand">阅钉Reading</a>
-   </div>
-   <div>
-      <ul class="nav navbar-nav pull-right">
-         <li><a href="/login">登录</a></li>
-         <li class="active"><a href="/register">注册</a></li>
-      </ul>
-   </div>
-</nav>
-
+<!-- index.html -->
+{% extends "base.html" %}
+{% block content %}
 
 <div id="container" class='container'>
    <div class="row">
@@ -60,5 +37,4 @@
       </div>
    </div>
 </div>
-</body>
-</html>
+{% endblock %}
