--- a/reading/templates/base.html
+++ b/reading/templates/base.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reading</title>
     {% load static %}
-    <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static '/css/mystyle.css' %}" rel="stylesheet">
-    <script src="{% static '/scripts/jquery-3.2.1.min.js' %}"></script>
-    <script src="{% static '/js/bootstrap.min.js' %}"></script>
+    <link href="{% static '/reading/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static '/reading/css/mystyle.css' %}" rel="stylesheet">
+    <script src="{% static '/reading/scripts/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static '/reading/js/bootstrap.min.js' %}"></script>
 </head>
 <body>
 <!--导航栏-->
