--- a/reading/templates/login.html
+++ b/reading/templates/login.html
@@ -1,20 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reading</title>
-    {% load static %}
-    <link href="{% static '/reading/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static '/reading/css/mystyle.css' %}" rel="stylesheet">
-    <script src="{% static '/reading/scripts/jquery-3.2.1.min.js' %}"></script>
-    <script src="{% static '/reading/js/bootstrap.min.js' %}"></script>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
 <!--导航栏-->
 <nav class="navbar navbar-inverse" role="navigation">
    <div class="navbar-header">
-      <a class="navbar-brand">阅钉Reading</a>
+      <a class="navbar-brand" href="/">阅钉Reading</a>
    </div>
    <div>
       <ul class="nav navbar-nav pull-right">
@@ -50,8 +39,4 @@
       </div>
    </div>
 </div>
-
-
-
-</body>
-</html>
+{% endblock %}
