--- a/reading/templates/search.html
+++ b/reading/templates/search.html
@@ -1,6 +1,20 @@
 <!-- index.html -->
 {% extends "base.html" %}
 {% block content %}
+<!--导航栏-->
+<nav class="navbar navbar-inverse" role="navigation">
+   <div class="navbar-header">
+      <a class="navbar-brand" href="/">阅钉Reading</a>
+   </div>
+   <div>
+      <ul class="nav navbar-nav">
+         <li class="active"><a href="#">书库</a></li>
+         <li><a href="/upload">上传</a></li>
+         <li><a href="/user">个人中心</a></li>
+      </ul>
+   </div>
+</nav>
+
     <div class="search-bar">
         <form class="bs-example bs-example-form" role="form" action="/search/" method="get">
             <div class="row">
