--- a/reading/templates/upload.html
+++ b/reading/templates/upload.html
@@ -8,7 +8,7 @@
    </div>
    <div>
       <ul class="nav navbar-nav">
-         <li class="active"><a href="#">书库</a></li>
+         <li class="active"><a href="/">书库</a></li>
          <li><a href="/upload">上传</a></li>
          <li><a href="/user">个人中心</a></li>
       </ul>
