--- a/reading/templates/contact.html
+++ b/reading/templates/contact.html
@@ -17,40 +17,36 @@
    </div>
 </nav>
 
-
 <div id="container" class='container'>
    <div class="row">
-      <div class="span6 left">
-         <form action enctype="multipart/form-data" class="form form-horizontal" role="form" method="post">{% csrf_token %}
+      <div class="span8 left">
+         <form action  class="form form-horizontal" role="form" method="post">{% csrf_token %}
             <div class="form-group">
-               <label for="inputName" class="col-sm-2 control-label">书名：</label>
+               <label for="inputUserName" class="col-sm-2 control-label">用户名：</label>
                   <div class="col-sm-4">
-                     <input type="text" name="name" class="form-control" id="inputName" value="{{ book.name }}" disabled>
+                     <input type="text" name="username" class="form-control" required id="inputUserName" value="{{ username }}" disabled>
                   </div>
             </div>
             <div class="form-group">
-               <label for="inputauthor" class="col-sm-2 control-label">作者：</label>
+               <label for="inputeMail" class="col-sm-2 control-label">邮箱：</label>
                   <div class="col-sm-4">
-                     <input type="text" name="author" class="form-control" id="inputauthor" value="{{ book.author }}" disabled>
+                     <input type="email" name="email" class="form-control" required id="inputeMail" placeholder="您自己的邮箱，站长将通过此邮箱联系您.">
                   </div>
             </div>
             <div class="form-group">
-               <label for="inputscore" class="col-sm-2 control-label">评分：</label>
+               <label for="inputUserName" class="col-sm-2 control-label">内容：</label>
                   <div class="col-sm-4">
-                     <input type="text" name="score" class="form-control" id="inputscore" value="{{ book.score }}" disabled>
+                     <textarea class="form-control" rows="6" placeholder="请留下您宝贵的意见和建议."></textarea>
                   </div>
             </div>
-            <div class="form-group">
-               <label class="col-sm-2 control-label" for="inputfile">文件输入：</label>
-               <input type="file" name="file" id="inputfile">
-            </div>
-            <div class="form-action form-group">
+            <div class="form-action">
                <div class="col-sm-2" style="float:none;display:block;margin-left:auto;margin-right:auto;">
-                  <button type="submit" class="btn btn-primary">保存</button>
+                  <button type="submit" class="btn btn-primary">发送</button>
                </div>
             </div>
          </form>
       </div>
    </div>
 </div>
+
 {% endblock %}
