--- a/reading/templates/search.html
+++ b/reading/templates/search.html
@@ -8,9 +8,11 @@
    </div>
    <div>
       <ul class="nav navbar-nav">
-         <li class="active"><a href="/">书库</a></li>
-         <li><a href="/upload">上传</a></li>
-         <li><a href="/user">个人中心</a></li>
+          <li class="active"><a href="/">书库</a></li>
+          <li><a href="/upload">上传</a></li>
+          <li><a href="/task">求书专区</a></li>
+          <li><a href="/contact">联系站长</a></li>
+          <li><a href="/user">个人中心</a></li>
       </ul>
    </div>
 </nav>
