--- a/reading/templates/contact.html
+++ b/reading/templates/contact.html
@@ -34,9 +34,9 @@
                   </div>
             </div>
             <div class="form-group">
-               <label for="inputUserName" class="col-sm-2 control-label">内容：</label>
+               <label for="inputContent" class="col-sm-2 control-label">内容：</label>
                   <div class="col-sm-4">
-                     <textarea class="form-control" rows="6" placeholder="请留下您宝贵的意见和建议."></textarea>
+                     <textarea class="form-control" name="content" id="inputContent" required rows="6" placeholder="请留下您宝贵的意见和建议."></textarea>
                   </div>
             </div>
             <div class="form-action">
