--- a/reading/templates/task.html
+++ b/reading/templates/task.html
@@ -23,9 +23,9 @@
        <div class="span6 left">
          <form action class="form form-horizontal" role="form" method="post">{% csrf_token %}
             <div class="form-group">
-               <label for="inputName" class="col-sm-2 control-label">书名：</label>
+               <label for="inputbookname" class="col-sm-2 control-label">书名：</label>
                   <div class="col-sm-4">
-                     <input type="text" name="name" class="form-control" id="inputName" required>
+                     <input type="text" name="bookname" class="form-control" id="inputbookname" required>
                   </div>
             </div>
             <div class="form-group">
