--- a/reading/templates/task.html
+++ b/reading/templates/task.html
@@ -42,15 +42,31 @@
                   </div>
             </div>
             <div class="form-group">
-               <label for="inputscore" class="col-sm-2 control-label">评分：</label>
+               <label for='inputScore' class="col-sm-2 control-label">评分：</label>
                   <div class="col-sm-4">
-                     <input type="text" name="score" class="form-control" id="inputscore" placeholder="请输入0~10之间的整数." required>
+                     <select name='score' class="form-control" id="inputScore">
+                        <option value="9">9</option>
+                        <option value="8">8</option>
+                        <option value="7">7</option>
+                        <option value="6">6</option>
+                        <option value="5">5</option>
+                        <option value="4">4</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="1">1</option>
+                     </select>
                   </div>
             </div>
              <div class="form-group">
-               <label for="inputformat" class="col-sm-2 control-label">格式：</label>
+               <label for='inputformat' class="col-sm-2 control-label">格式：</label>
                   <div class="col-sm-4">
-                     <input type="text" name="format" class="form-control" id="inputformat" placeholder="请输入0~10之间的整数." required>
+                     <select name='format' class="form-control" id="inputformat">
+                        <option value="any">任意</option>
+                        <option value="PDF">PDF</option>
+                        <option value="MOBI">MOBI</option>
+                        <option value="TXT">TXT</option>
+                        <option value="EPUB">EPUB</option>
+                     </select>
                   </div>
             </div>
             <div class="form-action form-group">
