--- a/reading/templates/upload.html
+++ b/reading/templates/upload.html
@@ -43,9 +43,19 @@
                   </div>
             </div>
             <div class="form-group">
-               <label for="inputscore" class="col-sm-2 control-label">评分：</label>
+               <label for='inputScore' class="col-sm-2 control-label">评分：</label>
                   <div class="col-sm-4">
-                     <input type="text" name="score" class="form-control" id="inputscore" placeholder="请输入0~10之间的整数." required>
+                     <select name='score' class="form-control" id="inputScore">
+                        <option value="9">9</option>
+                        <option value="8">8</option>
+                        <option value="7">7</option>
+                        <option value="6">6</option>
+                        <option value="5">5</option>
+                        <option value="4">4</option>
+                        <option value="3">3</option>
+                        <option value="2">2</option>
+                        <option value="1">1</option>
+                        </select>
                   </div>
             </div>
             <div class="form-group">
