--- a/reading/templates/testbootstrap.html
+++ b/reading/templates/testbootstrap.html
@@ -8,9 +8,11 @@
     <title>Reading</title>
 
     <link href="../static/reading/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/reading/css/bootstrapValidator.min.css" rel="stylesheet">
     <link href="../static/reading/css/mystyle.css" rel="stylesheet">
     <script src="../static/reading/scripts/jquery-3.2.1.min.js"></script>
     <script src="../static/reading/js/bootstrap.min.js"></script>
+    <script src="../static/reading/js/bootstrapValidator.min.js"></script>
 </head>
 <body>
 <!--导航栏-->
@@ -27,9 +29,10 @@
    </div>
 </nav>
 
+
 <div id="container" class='container'>
    <div class="row">
-       <div class="span6 left">
+      <div class="span6 left">
          <form action enctype="multipart/form-data" class="form form-horizontal" role="form" method="post">{% csrf_token %}
             <div class="form-group">
                <label for="inputName" class="col-sm-2 control-label">书名：</label>
@@ -51,70 +54,29 @@
                   </div>
             </div>
             <div class="form-group">
-               <label for="inputscore" class="col-sm-2 control-label">评分：</label>
+               <label for='inputScore' class="col-sm-2 control-label">评分：</label>
                   <div class="col-sm-4">
-                     <input type="text" name="score" class="form-control" id="inputscore" placeholder="请输入0~10之间的整数." required>
+                     <select name='score' class="form-control" id="inputScore">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        </select>
                   </div>
             </div>
-             <div class="form-group">
-               <label for="inputformat" class="col-sm-2 control-label">格式：</label>
-                  <div class="col-sm-4">
-                     <input type="text" name="format" class="form-control" id="inputformat" placeholder="请输入0~10之间的整数." required>
-                  </div>
+            <div class="form-group">
+               <label class="col-sm-2 control-label" for="inputfile">文件输入：</label>
+               <input type="file" name="file" id="inputfile" required>
             </div>
             <div class="form-action form-group">
                <div class="col-sm-2" style="float:none;display:block;margin-left:auto;margin-right:auto;">
-                  <button type="submit" class="btn btn-primary">发布</button>
+                  <button type="submit" class="btn btn-primary">保存</button>
                </div>
             </div>
          </form>
-
-
-
-
-       <hr>
-<table class="table table-striped">
-  <!--<caption>求书任务</caption>-->
-  <thead>
-    <tr>
-        <th>求书用户</th>
-        <th>书名</th>
-        <th>作者</th>
-        <th>格式</th>
-        <th>状态</th>
-        <th>送书用户</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Tanmay</td>
-      <td>Bangalore</td>
-      <td>560001</td>
-        <td>Tanmay</td>
-      <td><button href="#" role="button" class="btn btn-primary btn-small">送书</button></td>
-      <td>560001</td>
-    </tr>
-    <tr>
-      <td>Sachin</td>
-      <td>Mumbai</td>
-      <td>400003</td>
-        <td>Tanmay</td>
-      <td><button href="#" role="button" class="btn btn-primary btn-small">送书</button></td>
-      <td>560001</td>
-    </tr>
-    <tr>
-      <td>Uma</td>
-      <td>Pune</td>
-      <td>411027</td>
-        <td>Tanmay</td>
-      <td><a class='book-down btn btn-mini btn-primary' href="/uploadfile/{{ book.name }}">
-                            <i class="fa fa-download" aria-hidden="true"></i>上传
-                        </a></td>
-      <td>560001</td>
-    </tr>
-  </tbody>
-</table>
       </div>
+   </div>
 </div>
 
 </body>
