--- a/reading/static/reading/css/mystyle.css
+++ b/reading/static/reading/css/mystyle.css
@@ -26,3 +26,31 @@ body div.book-li {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+body {
+    background:url(../img/login.jpg) #f8f6e9;
+}
+.mycenter{
+    margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 350px;
+    width:500px;
+    padding: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+.mycenter mysign{
+    width: 440px;
+}
+.mycenter input,checkbox,button{
+    margin-top:2%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.mycheckbox{
+    margin-top:10px;
+    margin-left: 40px;
+    margin-bottom: 10px;
+    height: 10px;
+}
