--- a/reading/templates/testbootstrap.html
+++ b/reading/templates/testbootstrap.html
@@ -13,6 +13,7 @@
     <script src="../static/reading/scripts/jquery-3.2.1.min.js"></script>
     <script src="../static/reading/js/bootstrap.min.js"></script>
     <script src="../static/reading/js/bootstrapValidator.min.js"></script>
+    <script src="../static/reading/js/reading.js"></script>
 </head>
 <body>
 <!--导航栏-->
@@ -30,54 +31,30 @@
 </nav>
 
 
-<div id="container" class='container'>
-   <div class="row">
-      <div class="span6 left">
-         <form action enctype="multipart/form-data" class="form form-horizontal" role="form" method="post">{% csrf_token %}
-            <div class="form-group">
-               <label for="inputName" class="col-sm-2 control-label">书名：</label>
-                  <div class="col-sm-4">
-                     <input type="text" name="name" class="form-control" id="inputName" required>
-                  </div>
+<form action="login.php" method="post">
+            <div class="mycenter">
+            <div class="mysign">
+                <div class="col-lg-11 text-center text-info">
+                    <h2>请登录</h2>
+                </div>
+                <div class="col-lg-10">
+                    <input type="text" class="form-control" name="username" placeholder="请输入账户名" required autofocus/>
+                </div>
+                <div class="col-lg-10"></div>
+                <div class="col-lg-10">
+                    <input type="password" class="form-control" name="password" placeholder="请输入密码" required autofocus/>
+                </div>
+                <div class="col-lg-10"></div>
+                <div class="col-lg-10 mycheckbox checkbox">
+                    <input type="checkbox" class="col-lg-1">记住密码</input>
+                </div>
+                <div class="col-lg-10"></div>
+                <div class="col-lg-10">
+                    <button type="button" class="btn btn-success col-lg-12">登录</button>
+                </div>
             </div>
-            <div class="form-group">
-               <label for="inputauthor" class="col-sm-2 control-label">作者：</label>
-                  <div class="col-sm-4">
-                     <input type="text" name="author" class="form-control" id="inputauthor" required>
-                  </div>
-            </div>
-             <div class="form-group">
-               <label for="inputimgurl" class="col-sm-2 control-label">图片链接：</label>
-                  <div class="col-sm-4">
-                     <input type="text" name="imgurl" class="form-control" id="inputimgurl">
-                     <span class="helptext">如果忽略，将使用默认图片</span>
-                  </div>
-            </div>
-            <div class="form-group">
-               <label for='inputScore' class="col-sm-2 control-label">评分：</label>
-                  <div class="col-sm-4">
-                     <select name='score' class="form-control" id="inputScore">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        </select>
-                  </div>
-            </div>
-            <div class="form-group">
-               <label class="col-sm-2 control-label" for="inputfile">文件输入：</label>
-               <input type="file" name="file" id="inputfile" required>
-            </div>
-            <div class="form-action form-group">
-               <div class="col-sm-2" style="float:none;display:block;margin-left:auto;margin-right:auto;">
-                  <button type="submit" class="btn btn-primary">保存</button>
-               </div>
-            </div>
-         </form>
-      </div>
-   </div>
-</div>
+        </div>
+        </form>
 
 </body>
 </html>
